第一次提交

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script src="static/lib/windy/L.CanvasLayer.js"></script>
     <script src="static/lib/windy/L.Control.Velocity.js"></script>
     <script src="static/lib/windy/L.VelocityLayer.js"></script>
+    <script src="https://unpkg.com/terraformer@1.0.7"></script>
+    <script src="https://unpkg.com/terraformer-wkt-parser@1.1.2"></script>
   </head>
   <body>
     <div id="app"></div>
