整体为接受grib-json

--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <link rel="stylesheet" href="static/lib/leaflet/leaflet.css" />
     <script src="static/config/config.js"></script>
     <script src="static/lib/leaflet/leaflet.js"></script>
-    <script src="static/lib/windy/windy.js"></script>
-    <script src="static/lib/windy/L.CanvasLayer.js"></script>
-    <script src="static/lib/windy/L.Control.Velocity.js"></script>
-    <script src="static/lib/windy/L.VelocityLayer.js"></script>
+    <!--<script src="static/lib/windy/windy.js"></script>-->
+    <!--<script src="static/lib/windy/L.CanvasLayer.js"></script>-->
+    <!--<script src="static/lib/windy/L.Control.Velocity.js"></script>-->
+    <!--<script src="static/lib/windy/L.VelocityLayer.js"></script>-->
+    <script src="static/lib/windyGrib/windy.js"></script>
+    <script src="static/lib/windyGrib/L.CanvasLayer.js"></script>
+    <script src="static/lib/windyGrib/L.Control.Velocity.js"></script>
+    <script src="static/lib/windyGrib/L.VelocityLayer.js"></script>
     <script src="https://unpkg.com/terraformer@1.0.7"></script>
     <script src="https://unpkg.com/terraformer-wkt-parser@1.1.2"></script>
   </head>
