--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="static/lib/leaflet/leaflet.css" />
     <script src="static/config/config.js"></script>
     <script src="static/lib/leaflet/leaflet.js"></script>
+    <script src='static/lib/leaflet/leaflet.ChineseTmsProviders.js'></script>
     <!--<script src="static/lib/windy/windy.js"></script>-->
     <!--<script src="static/lib/windy/L.CanvasLayer.js"></script>-->
     <!--<script src="static/lib/windy/L.Control.Velocity.js"></script>-->
