--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>zgmap-地图演示</title>
     <link rel="stylesheet" href="static/lib/leaflet/leaflet.css" />
     <script src="static/config/config.js"></script>
+    <script src="static/lib/Date.js"></script>
     <script src="static/lib/leaflet/leaflet.js"></script>
     <script src='static/lib/leaflet/leaflet.ChineseTmsProviders.js'></script>
+    <script src='static/lib/leaflet/heatmap/heatmap.min.js'></script>
+    <script src='static/lib/leaflet/heatmap/leaflet-heatmap.js'></script>
     <!--<script src="static/lib/windy/windy.js"></script>-->
     <!--<script src="static/lib/windy/L.CanvasLayer.js"></script>-->
     <!--<script src="static/lib/windy/L.Control.Velocity.js"></script>-->
