修改地图初始视窗配置 - 山西省全省

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <script src="static/lib/Date.js"></script>
     <script src="static/lib/leaflet/leaflet.js"></script>
     <script src='static/lib/leaflet/leaflet.ChineseTmsProviders.js'></script>
-    <!-- <script src='static/lib/leaflet/heatmap/heatmap.min.js'></script> -->
-    <script src='static/lib/leaflet/heatmap/heatmap.js'></script>
+     <script src='static/lib/leaflet/heatmap/heatmap.min.js'></script>
     <script src='static/lib/leaflet/heatmap/leaflet-heatmap.js'></script>
     <!--<script src="static/lib/windy/windy.js"></script>-->
     <!--<script src="static/lib/windy/L.CanvasLayer.js"></script>-->
